@@ -751,6 +751,24 @@ public class AdminClient {
         }
 
         /**
+         * Wait for async task at (remote) nodeId to finish completion, using
+         * exponential backoff to poll the task completion status. Effectively
+         * waits forever.
+         * <p>
+         * 
+         * <i>Logs the status at each status check if debug is enabled.</i>
+         * 
+         * @param nodeId Id of the node to poll
+         * @param requestId Id of the request to check
+         * @return description The final description attached with the response
+         * @throws VoldemortException if task failed to finish in specified
+         *         maxWait time.
+         */
+        public String waitForCompletion(int nodeId, int requestId) {
+            return waitForCompletion(nodeId, requestId, Long.MAX_VALUE, TimeUnit.SECONDS, null);
+        }
+
+        /**
          * Wait till the passed value matches with the metadata value returned
          * by the remote node for the passed key.
          * <p>
@@ -792,6 +810,21 @@ public class AdminClient {
             throw new VoldemortException("Failed to get matching value " + value + " for key "
                                          + key + " at remote node " + nodeId + " in maximum wait"
                                          + maxWait + " " + timeUnit.toString() + " time.");
+        }
+
+        /**
+         * Wait till the passed value matches with the metadata value returned
+         * by the remote node for the passed key. Effectively waits forever.
+         * <p>
+         * 
+         * <i>Logs the status at each status check if debug is enabled.</i>
+         * 
+         * @param nodeId Id of the node to poll
+         * @param key metadata key to keep checking for current value
+         * @param value metadata value should match for exit criteria.
+         */
+        public void waitForCompletion(int nodeId, String key, String value) {
+            waitForCompletion(nodeId, key, value, Long.MAX_VALUE, TimeUnit.SECONDS);
         }
 
     }
