@@ -332,8 +332,12 @@ public class RebalancePartitionsInfo {
         return sb.toString();
     }
 
-    // TODO: Add javadoc
-    // TODO: move to rebalanceUtils? Or leave here?
+    /**
+     * Pretty prints a task list of rebalancing tasks.
+     * 
+     * @param infos list of rebalancing tasks (RebalancePartitiosnInfo)
+     * @return pretty-printed string
+     */
     public static String taskListToString(List<RebalancePartitionsInfo> infos) {
         StringBuffer sb = new StringBuffer();
         for(RebalancePartitionsInfo info: infos) {
